<resources>
    <string name="app_name">Live Weather</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_list">listActivity</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_default">425001</string>
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="title_activity_about">About</string>
    <string name="about_close">Close</string>
    <string name="banner_ad_unit_id">ca-app-pub-6424059900498440/9164005017</string>
</resources>
